fix layout problems

--- a/src/components/body/Body.css
+++ b/src/components/body/Body.css
@@ -1,5 +1,5 @@
 .body {
-   padding: 12px;
+   padding: 12px 0px;
    padding-bottom: 36px;
    
 }
