--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   flex: 1;
-  padding: 12px;
+  padding: 36px 12px;
   position: relative;
   align-items: center;
 }
